--- a/media-store/app/src/main/res/layout/activity_main.xml
+++ b/media-store/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="32dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ImageViewFragment">
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/image_view_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment_content_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
